--- a/themes/compro_theme/sass/config/_variables.scss
+++ b/themes/compro_theme/sass/config/_variables.scss
@@ -27,7 +27,7 @@ $dark-gray: #5f5f5f;    //rgb(95,95,95)
 $medium-gray: #969696;    //rgb(150,150,150)
 $light-gray: #b3b3b3;
 $lighter-gray: #f5f5f5;
-$gainsboro-gray: #e6e6e6;
+$gainsboro-lightgray: #e6e6e6;
 $um-maize: #ffca05;
 $um-maize-lightned: #FFFF38;
 $yellow: #ffcc05;
@@ -43,7 +43,7 @@ $tuna: #37383A;
 $shark: #292a2c;    //rgb(41,42,44)
 $mine-shaft: #2d2d2d;    //rgb(45,45,45)
 $cioccolato: #571c0c;   //rgb(87,28,12)
-
+$gainsboro-gray: #dcdcdc; //rgb(220, 220, 220)
 
 // Font Colors
 $base-font-color: $dark-gray;
