--- a/themes/compro_theme/sass/drupal/_field.scss
+++ b/themes/compro_theme/sass/drupal/_field.scss
@@ -18,7 +18,7 @@
     width: 100%;
 
     @media screen and(max-width: 768px) {
-      object-fit: contain;
+      object-fit: cover;
     }
 
   }
